solve the overlaping in our zones

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,23 @@
     top: 90vh;
     width: 90%;
     margin: 0 auto;
+
     text-align: center;
+}
+@media (max-width: 1300px) {
+    .zones {
+        height: 120vh;
+    }
+}
+@media (max-width: 1000px) {
+    .zones {
+        height: 140vh;
+    }
+}
+@media (max-width: 700px) {
+    .zones {
+        height: 200vh;
+    }
 }
 
 .heading-title {
@@ -18,6 +34,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
     gap: 1rem;
+    border: 1px solid white;
 }
 
 .zones .box-container .box {
@@ -31,10 +48,10 @@
     outline: #ffffff solid 5px;
 }
 .zones .box-container .box:hover {
-    color:#2ee59d;
+    color: #2ee59d;
     transition: 0.5s;
     transform: translateY(-10px);
-    outline:#2ee59d solid 5px;
+    outline: #2ee59d solid 5px;
     box-shadow: 0px 10px 30px #2ee59d;
 }
 
@@ -97,11 +114,11 @@
     flex: 1 1 16rem;
 }
 
-.about .content .icons-container .icons:hover{
-    color:#2ee59d;
+.about .content .icons-container .icons:hover {
+    color: #2ee59d;
     transition: 0.5s;
     transform: translateY(-10px);
-    border:#2ee59d solid 5px;
+    border: #2ee59d solid 5px;
     box-shadow: 0px 10px 30px #2ee59d;
 }
 
@@ -211,5 +228,3 @@ section {
     text-align: justify;
     letter-spacing: 1.5px;
 }
-
-
